# nonzu-deployments

./: .gitignore  test_missing_nonce_parsing.rs  test_oracle_error_handling.rs
binance-oracle/: .dockerignore  .env.example  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PriceOracleV2.sol  README.md  set_fly_secrets.sh  sync-sdk.sh
binance-oracle/src/: main.rs  mod.rs
binance-oracle/src/triggers/: binance_twap_trigger.rs  mod.rs
binance-oracle/src/twap/: calculator.rs  mod.rs
binance-oracle/src/websocket/: binance_client.rs  mod.rs  trade_parser.rs
script/: DeployTimeOracle.s.sol
time-oracle/: .dockerignore  .env.example  Cargo.toml  Dockerfile  PRODUCTION_DEPLOYMENT.md  README.md  set_fly_secrets.sh  sync-sdk.sh  test_direct.sh  test_local_shreds.sh  test_new_deployment.sh  test_selector_fix.rs  test_timestamp_issue.sh  test_tx.rs  test_tx_simple.rs
time-oracle/contracts/: deploy.sh  foundry.toml
time-oracle/contracts/script/: Deploy.s.sol  DeployTimeOracle.s.sol
time-oracle/contracts/src/: TimeOracle.sol
time-oracle/contracts/src/examples/: TimeOracleConsumer.sol
time-oracle/contracts/src/interfaces/: ITimeOracle.sol
time-oracle/contracts/test/: TimeOracle.t.sol
time-oracle/src/: main.rs  simple_test.rs
time-oracle/tests/: error_handling_unit_test.rs  orchestrator_error_handling_test.rs  time_oracle_error_config_test.rs
