[package]
name = "time-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
nonzu-sdk = { path = "vendor/nonzu-sdk" } # Updated path to the root SDK
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = { version = "0.6", features = ["full", "node-bindings"] } # Keep full features for compatibility
dotenv = "0.15"
async-trait = "0.1"
rustls = "0.23"
parking_lot = "0.12" # Added parking_lot
serde_json = "1.0"

# Removed: instant, chrono, hex, reqwest, serde_json, once_cell
# These are now handled by nonzu-sdk's dependencies or are no longer needed.

[[bin]]
name = "time-oracle"
path = "src/main.rs"

[[test]]
name = "time_oracle_error_config_test"
path = "tests/time_oracle_error_config_test.rs"

[[test]]
name = "error_handling_unit_test"
path = "tests/error_handling_unit_test.rs"

[[test]]
name = "orchestrator_error_handling_test"
path = "tests/orchestrator_error_handling_test.rs"

# Commented out - requires library target
# [[test]]
# name = "integration_test"
# path = "tests/integration_test.rs"